--- a/public/css/pageAccount.css
+++ b/public/css/pageAccount.css
@@ -114,15 +114,9 @@
 #personal { padding: 20px 80px; }
 #personal.input-group .input-group-addon { width: 125px; border-radius: 2px 0 0 2px; padding: 0px 10px; line-height: 44px; min-width: 125px; }
 #personal .input-group { width: 85%; }
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-#personal .input-group select.form-control { background-image: url(../images/bg_selectBirthday.jpg); }
-#personal .input-group select.form-control:hover { background-image: url(../images/bg_selectBirthday2.jpg); }
-}
-.input-group p{padding-left: 20px;height:40px;line-height:45px;}
-#personal .input-group select.form-control { height: 47px; width: 25%; float: left; margin: 0;}
-#personal .register-birthday p { float: left; padding-bottom: 0; padding-right: 8px; padding-left: 8px; margin: 0; line-height: 45px; font-size: 1.0em; }
-#personal .edit-birthday p { float: left; padding-bottom: 0; padding-right: 8px; padding-left: 8px; margin: 0; line-height: 45px; font-size: 1.0em; }
-#personal .edit-birthday select.year{height: 45px;display: inline-block;}
+
+.input-group > p{line-height:47px;padding: 0 0 0 20px; margin: 0;}
+
 @media (min-width: 992px) and (max-width: 1200px) {
 #personal .input-group select.form-control { width: 23%; }
 #personal { padding: 20px 60px; }
@@ -136,10 +130,10 @@
 #personal { padding: 20px 10px; }
 #personal .input-group { width: 99%; }
 #personal .input-group .input-group-addon { width: 115px; padding: 0px 4px; min-width: 115px; }
-#personal .edit-birthday .input-group-addon { display: block; float: left; }
-#personal .input-group select.form-control#edit-month { clear: both; width: 38%; }
-#personal .input-group select.form-control#edit-date { width: 38%; }
-#personal .input-group select.form-control#edit-year { margin-bottom: 20px; width: 47%; }
+#personal .edit-birthday .input-group-addon { display: block; float: left;height: 47px;line-height: 47px; }
+#user_birthday_1i{width: 200px;float:none;display:block;margin:0;}
+	#user_birthday_2i{width: 150px;margin:10px 15px 0 0;}
+	#user_birthday_3i{width: 150px;margin:10px 0 0 0;}
 }
 /*TAB3---------------------------------------------------------*/
 #address { padding: 20px 80px; width:100%;overflow: hidden;}
@@ -149,7 +143,7 @@
 #address .input-group .form-control{width: 70%;}
 #address .input-group p { float: left; width:70%;height:44px;line-height: 16px; display: inline-block; padding:10px 20px; }
 #address .text-left { display: block; padding-top: 40px; }
-#address .btn-custom-1 { width:50px;background-color: #f2f2f2; border-color: #e4e2e2; padding: 10px 0;text-align: center;; margin-left: 5px; }
+#address .btn-custom-1 { font-size:0.9em!important;color: #777;width:50px;background-color: #f2f2f2; border-color: #e4e2e2; padding: 10px 0;text-align: center;; margin-left: 5px; }
 #address .btn-custom-3:hover { -webkit-box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.4); box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.4); background-color: #f858b7; }
 form#patchthisaddressbook_2 {float: left;}
 @media (min-width: 1041px) and (max-width: 1200px) {
@@ -166,6 +160,7 @@ form#patchthisaddressbook_2 {float: left;}
 #address:before { content: '常用地址 Primary address'; background-color: #434343; color: #FFF; display: block; text-align: center; padding: 10px 0; margin: 10px -10px 0 -10px; }
 #address p { padding-top: 20px; }
 #address .input-group .input-group-addon { height: 30px;}
+#address .input-group .form-control {width: 100%;}
 #address .input-group {  margin-bottom: 10px; }
 #address .input-group p { width:100%;}
 #address { padding: 10px 10px; overflow: hidden; }
