--- a/public/css/pageContact.css
+++ b/public/css/pageContact.css
@@ -26,6 +26,7 @@
 .title.policy { width: 630px; }
 .bgBottom.about { display: none; }
 #contact_content{padding: 20px;}
+#footer-bottom .container {margin-bottom: -22px;}
 @media (max-width: 1008px) {
 .layout.contact .input-group.input-container { width: 100%; display: table; margin-bottom: 10px; padding: 0; }
 .contact-email { float: left; }
