--- a/public/css/pageRegister.css
+++ b/public/css/pageRegister.css
@@ -13,14 +13,8 @@ label { font-size: 1.0em; font-weight: normal; color: #646464; }
 .code { background-color: #FFF; border: solid 1px #eee; width: 50%; padding: 10px; margin-bottom: 20px; }
 #register-form .code .input-group .form-control { background-color: #F2F2F2; color: #B3B3B3; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none; }
 fieldset.half-margin { margin-bottom: 0px; }
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-#register-form .input-group select.form-control { background-image: url(../images/bg_selectBirthday.jpg); }
-#register-form .input-group select.form-control:hover { background-image: url(../images/bg_selectBirthday2.jpg); }
-}
-#register-form .input-group select.form-control { height: 47px; width: 25%; float: left; margin: 0; }
 #register-form .register-birthday p { float: left; padding-bottom: 0; padding-right: 8px; padding-left: 8px; margin: 0; line-height: 45px; font-size: 1.0em; }
 @media (min-width: 992px) and (max-width: 1200px) {
-#register-form .input-group select.form-control { width: 23%; }
 .emailNote { width: 33%; }
 .input-group { width: 55%; }
 .code { width: 55%; }
@@ -30,7 +24,6 @@ fieldset.half-margin { margin-bottom: 0px; }
 .input-lg { display: block; }
 .input-group { width: 73%; }
 .emailNote { width: 24%; }
-#register-form .input-group select.form-control { width: 23%; }
 .code { width: 73%; }
 }
 @media (max-width: 767px) {
@@ -41,9 +34,6 @@ fieldset.half-margin { margin-bottom: 0px; }
 .emailNote { display: none; }
 .row { padding-right: 0 15px; margin: 0; }
 #register-form .input-group .input-group-addon { width: 115px; padding: 0px 4px; min-width: 115px; }
-#register-form .input-group select.form-control#register-month { clear: both; width: 38%; }
-#register-form .input-group select.form-control#register-date { width: 38%; }
-#register-form .input-group select.form-control#register-year { margin-bottom: 20px; width: 45%; }
 .register-birthday .input-group-addon { display: block; float: left; }
 .layout.member .input-group select.form-control { float: left; }
 .layout.member p { float: left; }
@@ -52,4 +42,9 @@ fieldset.half-margin { margin-bottom: 0px; }
 .half-margin { font-size: 0.9em; }
 .code { width: 100%; }
 #content .btn-custom-2, #content .btn-custom-3 { font-size: 1em; }
+#user_birthday_1i{width: 200px;float:none;display:block;margin:0;}
+	#user_birthday_2i{width: 150px;margin:10px 15px 0 0;}
+	#user_birthday_3i{width: 150px;margin:10px 0 0 0;}
 }
+
+
