修改about文字和圖片

--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -17,11 +17,11 @@
     <div class="img-responsive" id="aboutBanner"></div><!-- #aboutBanner 品牌精神圖 -->
     <p>
       <br>
-      創造出妳自己的風格,讓自己看起來獨一無二，而別人也能了解妳的與眾不同。下了伸展台的時尚，很困難也很容易，對 LadyBoo 來說，時尚是了解自己，也懂得欣賞自己、妝點自己，是不必盲目跟風，就穿搭出別人學不來的獨特有型，我們更相信，因為熱愛一切美好事物而自信開心的妳，自然而然散發出迷人魅力，也是一種時尚定義。<br>
+      Boo，是兩個女生之間的親密暱稱，也是 LadyBoo 品牌誕生的由來，我們希望 LadyBoo 既是服飾品牌，同時也是讓女生開心、放鬆的穿衣間，在這裡，有我們關注的時尚話題與穿搭，也有對流行觀察的私密悄悄話，歡迎妳們隨時走進來，輕鬆挑選，穿出自己獨有的風格。<br>
       <br>
-      「有時候，一些簡單的改變與調整，就可以創造意想不到的結果」，這是 LadyBoo 創立品牌的初衷，而「蕾絲服飾」就是我們想與妳分享的簡單時尚：衣著加上蕾絲，輕輕鈎織出女人細緻多變的美，為平常的自己加上一點新鮮想像，讓穿著風情也跟著搖曳繽紛起來，當妳看見光影、看見身體像花綻開的優美姿態，欣賞自己的眼光開始不一樣，別人也會捨不得離開目光，細細品味如此精彩的妳。<br>
+      時尚風格很多種，簡單不失個性的穿著，卻一向是 LadyBoo 最愛，比如說，只要簡單加一點點「蕾絲」，衣服的表情立刻繽紛起來，時尚品牌如專做蕾絲服飾的澳洲品牌Lover、義大利手工蕾絲 La Perla……等，都紛紛採用了新顏色、新設計、新花樣，顛覆過去「蕾絲＝老氣」，或「蕾絲只能性感」的印象，把女生的魅力和不同面貌鈎織出來，微微透露出性感、甜美、陽光、健康及更多可能性，LadyBoo 因為愛上這一半辛辣一半甜的美學，特地把蕾絲融入日常穿著，讓每個女生都能輕易穿搭我們精心設計或挑選的時尚單品。<br>
       <br>
-      蕾絲是一半的美感哲學，一半辛辣一半甜，一半表露自我一半讓人無法猜透，偶爾妳是小露性感的小女人,有時妳是追求輕鬆自在的大女孩，LadyBoo 希望衣服的樣式由我們為妳設計挑選，想穿出哪一種與眾不同的個性時尚表情，讓妳的心情來決定。</p>
+      Hey, pretty Boo！現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。</p>
     </div><!-- End 內文 -->
   </div>
 
