--- a/public/css/pageProduct.css
+++ b/public/css/pageProduct.css
@@ -7,11 +7,13 @@ h3.title span { font: 0.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!imp
 #prodTop { background-color: #252525; height: auto; padding-bottom: 40px; }
 #prodTop .container { background-image: url(../images/bg_prodTop.png); background-repeat: no-repeat; padding-top: 40px; width: 1300px; padding-left: auto; padding-right: auto; color: #959595; }
 #product-image-container { width: 100%; max-width: 560px;position:relative;height:100%;max-height:560px; }
+#product-image-container img{max-height:560px;}
 #product-image-container:hover #zoom{display:none;}
-#zoom { background-image: url(../images/img_zoom.png); height: 40px; width: 40px; position: absolute; right: 0px; bottom: 0px; display: block;z-index:1000; }
-#product-image-carousel-container { width: 100%; max-width: 560px; margin-right: 0px; padding-top: 20px; float: none; overflow: hidden; clear:both;}
-#product-image-carousel-container li { display: block; float: left; margin-left: 2%; width: 15%; max-width: 90px; }
+#zoom { background-image: url(../images/img_zoom.png); height: 40px; width: 40px; position: absolute; right: 0px; bottom: 0px; display: block;z-index:900; }
+#product-image-carousel-container { width: 100%; max-width: 560px; margin-right: 0px; padding: 20px 0 0 0; float: none; overflow: hidden; clear:both;}
+#product-image-carousel-container li { display: inline-block; margin-left: 2%; width: 15%; max-width: 90px;max-height:90px; white-space: nowrap;}
 #product-image-carousel-container li.markLi { margin-left: 0px; }
+#product-image-carousel-container li img{max-height:90px;height: 100%;}
 .col-md-6.col-sm-12.col-xs-12.product { width: 47%; }
 .product .product-name { font: normal 1.3em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; color: #FFF; color: #FFF; }
 #prodTop .title span { font: normal 1.1em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; padding: 0 0 0 0!important; display: block; }
@@ -87,10 +89,12 @@ h2.title { background: none; }
 }
 /*--------------------------------------*/
 .cloud-zoom-lens {margin:0px;background-color:#fff;cursor:move;}
-.cloud-zoom-big { overflow: hidden; margin-top: 4px; margin-left: 4px; border: 1px solid #000; }
+.cloud-zoom-big { overflow: hidden; margin-top: 4px; margin-left: 4px; border: 1px solid #000;max-height: 560px; }
 .cloud-zoom-loading {color:white;background:#222;padding:0px;}
 .zoom-tiny-image:hover{border:1px solid #c9006e;}
 .active-slide{border:2px solid #c9006e;}
+.mousetrap{max-height: 560px;}
+#zoom1{max-height: 560px;}
 @media (max-width: 767px) {
 .cloud-zoom-lens {display:none!important;}
 .cloud-zoom-big { display:none!important; }
