--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -257,7 +257,8 @@
 
   <script src="/js/bootstrap.min.js"></script> 
   <script src="/js/jquery.flexslider-min.js"></script> 
-
+  <script src="/js/jquery.colorbox.js"></script> 
+  <script src="/js/jquery.bxslider.min.js"></script> 
   <script src="/js/main.js"></script> 
   <!--LightBox Start**************************************************************************************************************-->
 <div id="lightBox">
