--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,7 @@
 <% attachments.inline['maillogo.jpg'] = File.read(File.join("public","images","email", "maillogo.jpg")) %>
 
-<!-- <img src="cid:maillogo.jpg" alt="logo" style='float: right;' > -->
-<%= image_tag attachments['maillogo.jpg'].url %>
+<img src="cid:maillogo.jpg" alt="logo" style='float: right;' >
+<%# image_tag attachments['maillogo.jpg'].url %>
 
 <p>親愛的會員 <%= @resource.username %>，您好：</p>
 
