--- a/public/css/pageProduct.css
+++ b/public/css/pageProduct.css
@@ -6,8 +6,8 @@ h3.title span { font: 0.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!imp
 .title.viewed { width: 240px; }
 #prodTop { background-color: #252525; height: auto; padding-bottom: 40px; }
 #prodTop .container { background-image: url(../images/bg_prodTop.png); background-repeat: no-repeat; padding-top: 40px; width: 1300px; padding-left: auto; padding-right: auto; color: #959595; }
-#product-image-container { width: 100%; max-width: 560px;position:relative;height:100%;max-height:560px; }
-#product-image-container img{max-height:560px;}
+#product-image-container { overflow:hidden;width: 100%; max-width: 560px;position:relative;height:100%;max-height:560px; }
+#product-image-container img{height:auto;width: 100%;}
 #product-image-container:hover #zoom{display:none;}
 #zoom { background-image: url(../images/img_zoom.png); height: 40px; width: 40px; position: absolute; right: 0px; bottom: 0px; display: block;z-index:900; }
 #product-image-carousel-container { width: 100%; max-width: 560px; margin-right: 0px; padding: 20px 0 0 0; float: none; overflow: hidden; clear:both;}
